--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dependencies = [
     "matplotlib >= 3.7",
     "qiskit >= 0.42",
     "ipykernel >= 6.22",
+    "ipywidgets",
+    "pylatexenc",
 ]
 
 [project.optional-dependencies]
